@@ -1,27 +1,12 @@
 <?php
-
-// Pandora FMS - the Free monitoring system
+// Pandora FMS - the Free Monitoring System
 // ========================================
 // Copyright (c) 2004-2008 Sancho Lerena, slerena@gmail.com
-// Main PHP/SQL code development and project architecture and management
+// Main PHP/SQL code development, project architecture and management.
 // Copyright (c) 2004-2008 Raul Mateos Martin, raulofpandora@gmail.com
-// CSS and some PHP additions
-// Copyright (c) 2006-2007 Jonathan Barajas, jonathan.barajas[AT]gmail[DOT]com
-// Javascript Active Console code.
-// Copyright (c) 2006 Jose Navarro <contacto@indiseg.net>
-// Additions to Pandora FMS 1.2 graph code and new XML reporting template management
-// Copyright (c) 2005-2007 Artica Soluciones Tecnologicas, info@artica.es
-//
-// This program is free software; you can redistribute it and/or
-// modify it under the terms of the GNU General Public License
-// as published by the Free Software Foundation; version 2
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-// You should have received a copy of the GNU General Public License
-// along with this program; if not, write to the Free Software
-// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+// CSS and some PHP code additions
+// Please see http://pandora.sourceforge.net for full contribution list
+
 $lang_label["view_agents"]="Ver agentes";
 $lang_label["manage_incidents"]="Gestión de incidentes";
 $lang_label["view_users"]="Ver usuarios";
@@ -610,7 +595,7 @@ $lang_label["lastupdate"]="Actualizado el";
 $lang_label["network"]="Red";
 $lang_label["server_detail"]="Detalle de configuración";
 $lang_label["no_modules"]="Este agente no tiene ningún módulo definido";
-$lang_label["no_monitors"]="Este agente no tiene ningún monitor definido";
+$lang_label["no_monitors"]="Este agente no tiene ningún monitor con datos";
 $lang_label["no_alerts"]="Este agente no tiene ninguna alerta definida";
 $lang_label["server"]="Servidor";
 
